--- a/5eNPCCreator/nbproject/private/private.properties
+++ b/5eNPCCreator/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\B0603587\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\k1110172\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
